<resources>
    <string name="app_name">Explore Himachal</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trekking">Trekking</string>
    <string name="camping">Camping</string>
    <string name="book_now">Book Now</string>
    <string name="card">Credit / Debit / ATM Card</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="upi_id">UPI Id</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="pay_on_check_in">Pay On Check In</string>
    <string name="book">Book</string>
    <string name="nearby_hotels">Nearby Hotels</string>
    <string name="description">Description</string>
    <string name="contributors">Contributors</string>
    <string name="pallavi">Pallavi</string>
    <string name="muskan">Muskan Thakur</string>
    <string name="komal">Komal Sharma</string>
    <string name="pallaviheera0946_gmail_com">pallaviheera0946@gmail.com</string>
    <string name="muskaanthakur1245_gmail_com">muskaanthakur1245@gmail.com</string>
    <string name="komalbadyal10_gmail_com">komalbadyal10@gmail.com</string>
</resources>