<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:title="Payment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayoutCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/radioButtonCard"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <EditText
                            android:id="@+id/editTextCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/card_number"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber">

                            <LinearLayout
                                android:id="@+id/linearLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:orientation="horizontal"
                                android:weightSum="2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber">

                                <EditText
                                    android:id="@+id/editTextMonth"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:layout_weight="1"
                                    android:hint="@string/mm"
                                    android:importantForAutofill="no"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:padding="8dp" />

                                <EditText
                                    android:id="@+id/editTextYear"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="@string/yy"
                                    android:importantForAutofill="no"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:padding="8dp" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/editTextCVV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:hint="@string/cvv"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:maxLength="3"
                                android:padding="8dp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/buttonPayCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/pay"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RadioButton
                        android:id="@+id/radioButtonUPI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/constraintLayoutCard"
                        android:text="@string/upi_id" />

                    <LinearLayout
                        android:id="@+id/llUPI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/radioButtonUPI"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <EditText
                            android:id="@+id/editTextUPI"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/enter_upi_id" />

                        <Button
                            android:id="@+id/buttonPayUPI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/pay"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/radioButtonPayOnCheckIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/llUPI"
                        android:text="@string/pay_on_check_in" />

                    <Button
                        android:id="@+id/buttonBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/radioButtonPayOnCheckIn"
                        android:layout_marginTop="16dp"
                        android:text="@string/book"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </RelativeLayout>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>